[gd_scene format=3 uid="uid://b55p48oyoj4p8"]

[ext_resource type="Script" uid="uid://cqndwg6nnxgwq" path="res://scripts/camera_control.gd" id="1_018ao"]
[ext_resource type="Script" uid="uid://camda4v1t1sd4" path="res://scripts/game_state.gd" id="1_ukbay"]
[ext_resource type="PackedScene" uid="uid://dw880124lcimr" path="res://scenes/map_system.tscn" id="2_018ao"]
[ext_resource type="Script" uid="uid://cibcr6l8est7x" path="res://scripts/selection_box.gd" id="4_gu6ud"]
[ext_resource type="PackedScene" uid="uid://cser0io6hhouf" path="res://scenes/hostile.tscn" id="5_0ebsy"]

[node name="GameState" type="Node3D" unique_id=465853294]
script = ExtResource("1_ukbay")

[node name="GameInterface" type="Control" parent="." unique_id=246498740]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PlayerCameraNode" type="Node3D" parent="." unique_id=239011046]

[node name="Marker3D" type="Marker3D" parent="PlayerCameraNode" unique_id=861034217]
transform = Transform3D(1, 0, 0, 0, 0.70710677, 0.70710677, 0, -0.70710677, 0.70710677, -32.22888, 20, 35.06301)
script = ExtResource("1_018ao")

[node name="PlayerCamera" type="Camera3D" parent="PlayerCameraNode/Marker3D" unique_id=1093098968]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="." unique_id=733590100]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 0, 120, 0)
shadow_enabled = true

[node name="Map" parent="." unique_id=1208725545 instance=ExtResource("2_018ao")]

[node name="SelectionUI" type="CanvasLayer" parent="." unique_id=530867672]

[node name="SelectionBox" type="Control" parent="SelectionUI" unique_id=19137882]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("4_gu6ud")

[node name="CharacterBody3D" parent="." unique_id=1023116470 instance=ExtResource("5_0ebsy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.4691725, 2.9999962, 14.942919)
